--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "npx tsc && node dist/index",
     "test:db": "ts-node src/test-db.ts",
-    "start":"node dist/index",
+    "start": "node dist/index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -60,6 +60,7 @@
     "es-errors": "^1.3.0",
     "escape-html": "^1.0.3",
     "etag": "^1.8.1",
+    "express-validator": "^7.2.1",
     "finalhandler": "^1.3.1",
     "forwarded": "^0.2.0",
     "fresh": "^0.5.2",
