--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-
+//Flutterwave 
 BASE_URL  =https://api.flutterwave.com/v3
 SECRET_KEY =YOUR_FLUTTERWAVE_SECRET_KEY
 PUBLIC_KEY =YOUR_FLUTTERWAVE_PUBLIC_KEY
@@ -24,8 +24,5 @@ PORT=YOUR_SERVER_PORT_NUMBER
 PASSWORD=YOUR_POSTGRES_PASSWORD
 
 
-hash_key=hashkey
-jwt_secret=jwt_secret
 
-//render BASE_URL
-DATABASE_URL=postgresql://e_commerce_database_r5gs_user:yCJgnmbQXFhUKe4VsbO2uXoujlDjbFub@dpg-d147uuggjchc73ffh240-a.oregon-postgres.render.com/e_commerce_database_r5gs
+
