add redis for cart management,update read me and other features

--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,8 @@ PORT=YOUR_SERVER_PORT_NUMBER
 
 //postgress 
 PASSWORD=YOUR_POSTGRES_PASSWORD
+PGPORT=YOUR_POSTGRES_PORT
+DATABASE=YOUR_POSTGRES_DATABASE
 
 
 
