--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "qs": "^6.13.0",
     "range-parser": "^1.2.1",
     "raw-body": "^2.5.2",
+    "redis": "^4.7.1",
     "reflect-metadata": "^0.2.2",
     "safe-buffer": "^5.2.1",
     "safer-buffer": "^2.1.2",
