update get order and others

--- a/.env.example
+++ b/.env.example
@@ -25,6 +25,7 @@ PASSWORD=YOUR_POSTGRES_PASSWORD
 PGPORT=YOUR_POSTGRES_PORT
 DATABASE=YOUR_POSTGRES_DATABASE
 
-
+//cookie
+NODE_ENV=development or production
 
 
